// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/automatic-tokenization.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="anticon ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            data-icon="arrowdown"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-disabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="anticon ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            data-icon="arrowdown"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/coordinate.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Zhejiang"
        >
          Zhejiang
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="anticon ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            data-icon="arrowdown"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Hangzhou"
        >
          Hangzhou
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="anticon ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            data-icon="arrowdown"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/label-in-value.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy (101)"
      >
        Lucy (101)
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          data-icon="arrowdown"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/multiple.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Please select
      </div>
      <ul>
        <li
          class="ant-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="a10"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            a10
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              class="anticon ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="c12"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            c12
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              class="anticon ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/optgroup.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          data-icon="arrowdown"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a person
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          data-icon="arrowdown"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search-box.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled ant-select-no-arrow"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        input search text
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/select-users.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select users
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="a1"
        >
          a1
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="anticon ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            data-icon="arrowdown"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861c12.7 14.7 35.5 14.7 48.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="anticon ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="anticon ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="anticon ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                class="anticon ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/tags.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Tags Mode
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
